# LearnPython

./: .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README.md
scripts/: setup.sh
src/learnpython/: __init__.py  config.py  utils.py
tests/: conftest.py  test_config.py  test_utils.py
